# Hugo

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE.md  PROBLEMES.md  README.md  ROADMAP.md  prompt-claude-code.md
.github/workflows/: ci.yml
corpus/: accord-appose-postpose.md  accord-avance-adjectif-verbal.md  accord-avance-couleurs-composees.md  accord-avance-demi.md  accord-avance-locutions.md  accord-avance-numeraux.md  accord-avance-trait-union.md  confusion-a-a.md  confusion-accents.md  confusion-ce-se.md  confusion-dans-den.md  confusion-dont-donc.md  confusion-et-est.md  confusion-la-la.md  confusion-leur-leurs.md  confusion-ni-ny.md  confusion-ou-ou.md  confusion-peu-peut.md  confusion-plutot.md  confusion-pres-pret.md  confusion-quand-quant.md  confusion-quel-quelle.md  confusion-sa-ca.md  confusion-sans-sen.md  confusion-terminaisons.md  elision.md  typo-apostrophe.md  typo-espaces.md  typo-guillemets.md  typo-ligatures.md  typo-nombres.md  typo-ponctuation.md
crates/hugo-core/: Cargo.toml
crates/hugo-core/assets/: dicollecte.fst  morpho.freq.fst  morpho.fst  pos.crf
crates/hugo-core/examples/: audit.rs  check.rs  conjugation_gaps.rs  debug_cases.rs  debug_dep.rs  debug_pos.rs
crates/hugo-core/src/: clause.rs  dep.rs  lib.rs  morpho.rs  pos.rs  spelling.rs  tokenizer.rs
crates/hugo-core/src/rules/: adjectif_verbal.rs  agreement.rs  attribute.rs  capitalization.rs  conjugation.rs  demi.rs  detached_appositive.rs  duplicates.rs  elision.rs  epithet.rs  homophones.rs  imperatif.rs  locutions.rs  mod.rs  numeraux.rs  passive_participle.rs  past_participle.rs  pronominal_participle.rs  quantifier.rs  special_agreement.rs  subjunctive.rs  trait_union.rs
crates/hugo-core/src/rules/confusion/: a_a.rs  accents.rs  ce_se.rs  dans_den.rs  dont_donc.rs  et_est.rs  la_la.rs  leur_leurs.rs  mod.rs  ni_ny.rs  ou_ou.rs  peu_peut.rs  plutot.rs  pres_pret.rs  quand_quant.rs  quel_quelle.rs  sa_ca.rs  sans_sen.rs  terminaisons.rs
crates/hugo-core/src/rules/typography/: ellipsis.rs  ligatures.rs  mod.rs  numbers.rs  punct_doubling.rs  spacing.rs
crates/hugo-core/tests/: grammar.rs  spelling.rs
crates/hugo-ffi/: Cargo.toml  cbindgen.toml
crates/hugo-ffi/examples/: c_demo.c
crates/hugo-ffi/include/: hugo.h  module.modulemap
crates/hugo-ffi/src/: lib.rs
crates/hugo-ffi/swift/: Hugo.swift
crates/hugo-tauri/: Cargo.toml  build.rs
crates/hugo-tauri/permissions/: default.toml
crates/hugo-tauri/permissions/autogenerated/: reference.md
crates/hugo-tauri/permissions/autogenerated/commands/: check_text.toml  list_rules.toml
crates/hugo-tauri/permissions/schemas/: schema.json
crates/hugo-tauri/src/: lib.rs
crates/hugo-wasm/: Cargo.toml
crates/hugo-wasm/src/: lib.rs
docs/: c-ffi-integration.md  tauri-integration.md
scripts/: build-xcframework.sh
tools/compile-dict/: Cargo.toml
tools/compile-dict/src/: main.rs
tools/compile-lefff/: Cargo.toml
tools/compile-lefff/src/: main.rs
tools/compile-morpho/: Cargo.toml  gender-overrides.tsv
tools/compile-morpho/src/: main.rs
tools/patch-morpho-gender/: Cargo.toml
tools/patch-morpho-gender/src/: main.rs
tools/train-crf/: Cargo.toml  README.md
tools/train-crf/src/: main.rs
tools/train-dep/: Cargo.toml
tools/train-dep/src/: main.rs
