[package]
name = "hugo-ffi"
description = "Bindings C (FFI) pour Hugo — iOS, macOS, Android, etc."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
hugo-core = { workspace = true }
