[package]
name = "hugo-tauri"
description = "Plugin Tauri v2 pour Hugo — commande check_text."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
links = "hugo-tauri"

[dependencies]
hugo-core = { workspace = true }
tauri = "2"
serde = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
